--- a/wp-content/themes/spa-and-salon/style.css
+++ b/wp-content/themes/spa-and-salon/style.css
@@ -374,7 +374,8 @@ html {
 
 body {
 	color:#666;
-    font:18px/30px 'Lato', sans-serif;
+    /*font:18px/30px 'Lato', sans-serif;*/
+	font:24px/30px 'ClutchSans', sans-serif;
     background:#e9e9e9;
      overflow-y: scroll;
     -webkit-text-size-adjust:100%;
