--- a/wp-content/themes/spa-and-salon/style.css
+++ b/wp-content/themes/spa-and-salon/style.css
@@ -528,8 +528,8 @@ a:visited {
 
 a:hover,
 a:focus {
-	color: #9a938b;
-	text-decoration: underline;
+	color: #090909;
+	text-decoration: none;
 }
 
 a:focus {
@@ -1428,7 +1428,9 @@ object {
 .post .entry-header{margin: 0 0 20px;}
 
 .post .entry-header .entry-title{
-	font: 30px/36px 'Marcellus', serif;
+	/*font: 30px/36px 'Marcellus', serif;*/
+	font: 30px/36px 'ClutchSans', serif;
+
 	color: #333;
 	margin: 0 0 10px;
 }
@@ -1514,7 +1516,8 @@ object {
 #primary .page .entry-content h6{
 	color: #333;
 	font-weight: 400;
-	font-family: 'Marcellus', serif;
+	/*font-family: 'Marcellus', serif;*/
+	font-family: 'ClutchSans', sans-serif;
 }
 
 #primary .post .entry-content h1,
@@ -1688,12 +1691,13 @@ object {
 	font-family: 'ClutchSans';
 	font-size: 22px;
 	width:50%;
-	float:left;
+	/*float:left;*/
 	position:relative;
 }
 
 .b-right{
-	width:50%; float:right
+	width:50%;
+	/*float:right*/
 }
 
 .header-line{
@@ -2412,6 +2416,13 @@ object {
 		margin-bottom: 20px;
 	}
 	#secondary .widget.widget_spa_and_salon_featured_post .img-holder img{width: 100%;}
+
+	.b-left{
+		width: 100% !important;
+	}
+	.b-right{
+		display: block !important;
+		width: 100% !important;
 }
 
 @media only screen and (max-width: 767px){
@@ -2531,4 +2542,7 @@ object {
 	.comment-form input[type="text"],
 	.comment-form input[type="email"],
 	.comment-form input[type="url"]{width: 100%;}
+
+
+	}
 }
