--- a/wp-content/plugins/background-slider-master/public/css/background-slider-master-public.css
+++ b/wp-content/plugins/background-slider-master/public/css/background-slider-master-public.css
@@ -50,7 +50,7 @@ body {
 .bsm-layout{
 	background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
     height: 100%;
-    position: absolute;
+    position: fixed;
     width: 100%;
 }
 
